# minimal_agent

./: .gitignore  AGENTS.md  PROJECT.md  README.md  config.yaml  main.py  pyproject.toml
prompts/: observation_prompt.txt  system_prompt.txt  user_turn_prompt.txt
src/: agent.py  cli.py  config.py  llm.py  memory.py  parser.py  prompts.py  tracing.py
src/tools/: __init__.py  base.py  calculator.py  python_tool.py  registry.py
tests/: test_core.py
